# web-socket-benchmark

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: bench.rs  main.rs
