[package]
name = "web-socket-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tokio-tungstenite = "*"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
web-socket = { git = "https://github.com/nurmohammed840/websocket.rs.git", branch = "main" }
fastwebsockets = "0.3.1"
rand = "0.8.5"
